--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css?family=PT+Mono|Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/28ec47744a.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Digital Wallet</title>
   </head>
   <body>
